新增bucket删除功能
